--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=PMIC_BQ25896
-version=0.1
+version=0.3
 author=sqmsmu
 maintainer=Muddassir Syed<mud.5991@gmail.com>
 sentence=Arduino Library for Power Management and Battery Charging IC BQ25896 from Texas Instruments.
-paragraph=Arduino Library for Power Management and Battery Charging IC BQ25896 from Texas Instruments.
+paragraph=I2C based Arduino Library for Power Management and Battery Charging IC BQ25896 from Texas Instruments.
 category=Power Management
 url=https://github.com/sqmsmu/PMIC_BQ25896
 architectures=*
